SintacticAnalysis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SUMA

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     code -> INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimientos
Rule 3     procedimientos -> empty
Rule 4     procedimientos -> procedimiento procedimientos
Rule 5     procedimiento -> PROC ID PARENTESIS_IZQ parametro PARENTESIS_DER INICIOPROC DOSPUNTOS expresion FINPROC PUNTOCOMA
Rule 6     cuerpo -> empty
Rule 7     cuerpo -> expresion cuerpo
Rule 8     cuerpo -> variable cuerpo
Rule 9     variable -> variable1
Rule 10    variable -> variable2
Rule 11    variable1 -> DCL ID PUNTOCOMA
Rule 12    variable2 -> DCL ID DEFAULT NUMERO PUNTOCOMA
Rule 13    expresion -> empty
Rule 14    expresion -> condicion1 expresion
Rule 15    expresion -> condicion2 expresion
Rule 16    expresion -> repita expresion
Rule 17    expresion -> hacer expresion
Rule 18    expresion -> funcion expresion
Rule 19    expresion -> llamarProc expresion
Rule 20    expresion -> llamarProc
Rule 21    expresion -> condicion1
Rule 22    expresion -> condicion2
Rule 23    expresion -> repita
Rule 24    expresion -> hacer
Rule 25    condicion1 -> ENCASO cond1Aux1 FINENCASO PUNTOCOMA
Rule 26    condicion2 -> ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
Rule 27    cond2Aux1 -> cond2Aux2 SINO LLAVE_IZQ expresion LLAVE_DER
Rule 28    cond2Aux1 -> empty empty empty empty empty
Rule 29    cond1Aux1 -> cond1Aux2 SINO LLAVE_IZQ expresion LLAVE_DER
Rule 30    cond1Aux1 -> empty empty empty empty empty
Rule 31    cond1Aux2 -> empty
Rule 32    cond1Aux2 -> CUANDO ID condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER cond1Aux2
Rule 33    cond2Aux2 -> CUANDO condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER cond2Aux2
Rule 34    cond2Aux2 -> empty
Rule 35    condicion -> IGUAL
Rule 36    condicion -> MAYOR
Rule 37    condicion -> MENOR
Rule 38    condicion -> DIFERENTE
Rule 39    condicion -> MAYORIGUAL
Rule 40    condicion -> MENORIGUAL
Rule 41    sentencia -> ID
Rule 42    sentencia -> NUMERO
Rule 43    repita -> REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
Rule 44    hacer -> DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
Rule 45    funcion -> Aleatorio expresion
Rule 46    funcion -> Mover expresion
Rule 47    funcion -> funcionAlge expresion
Rule 48    funcion -> Aleatorio
Rule 49    funcion -> Mover
Rule 50    funcion -> funcionAlge
Rule 51    Aleatorio -> ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
Rule 52    Mover -> MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
Rule 53    paramMover -> AF
Rule 54    paramMover -> F
Rule 55    paramMover -> DFA
Rule 56    paramMover -> IFA
Rule 57    paramMover -> DFB
Rule 58    paramMover -> IFB
Rule 59    paramMover -> A
Rule 60    paramMover -> DAA
Rule 61    paramMover -> IAA
Rule 62    paramMover -> DAB
Rule 63    paramMover -> IAB
Rule 64    paramMover -> AA
Rule 65    funcionAlge -> INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 66    funcionAlge -> DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 67    funcionAlge -> INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 68    parametro -> ID COMA parametro
Rule 69    parametro -> NUMERO COMA parametro
Rule 70    parametro -> ID
Rule 71    parametro -> NUMERO
Rule 72    llamarProc -> LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
Rule 73    empty -> <empty>

Terminals, with rules where they appear

A                    : 59
AA                   : 64
AF                   : 53
ALEATORIO            : 51
COMA                 : 65 66 67 68 69
CUANDO               : 32 33
DAA                  : 60
DAB                  : 62
DCL                  : 11 12
DEC                  : 66
DEFAULT              : 12
DESDE                : 44
DFA                  : 55
DFB                  : 57
DIFERENTE            : 38
DOSPUNTOS            : 2 5
ENCASO               : 25 26
ENTONS               : 32 33
F                    : 54
FIN                  : 2
FINDESDE             : 44
FINENCASO            : 25 26
FINPROC              : 5
HAGA                 : 44
HASTA                : 44
HASTAENCONTRAR       : 43
IAA                  : 61
IAB                  : 63
ID                   : 5 11 12 26 32 41 43 44 65 66 67 68 70 72
IFA                  : 56
IFB                  : 58
IGUAL                : 35 44
INC                  : 65
INI                  : 67
INICIO               : 2
INICIOPROC           : 5
LLAMAR               : 72
LLAVE_DER            : 27 29 32 33 43 44
LLAVE_IZQ            : 27 29 32 33 43 44
MAYOR                : 36
MAYORIGUAL           : 39
MENOR                : 37
MENORIGUAL           : 40
MOVER                : 52
NUMERO               : 12 42 69 71
PARENTESIS_DER       : 5 51 52 65 66 67 72
PARENTESIS_IZQ       : 5 51 52 65 66 67 72
PROC                 : 5
PUNTOCOMA            : 2 5 11 12 25 26 43 44 51 52 65 66 67 72
REPITA               : 43
SINO                 : 27 29
SUMA                 : 
error                : 

Nonterminals, with rules where they appear

Aleatorio            : 45 48
Mover                : 46 49
Start                : 0
code                 : 1
cond1Aux1            : 25
cond1Aux2            : 29 32
cond2Aux1            : 26
cond2Aux2            : 27 33
condicion            : 32 33 43
condicion1           : 14 21
condicion2           : 15 22
cuerpo               : 2 7 8
empty                : 3 6 13 28 28 28 28 28 30 30 30 30 30 31 34
expresion            : 5 7 14 15 16 17 18 19 27 29 32 33 43 44 45 46 47
funcion              : 18
funcionAlge          : 47 50
hacer                : 17 24
llamarProc           : 19 20
paramMover           : 52
parametro            : 5 68 69 72
procedimiento        : 4
procedimientos       : 2 4
repita               : 16 23
sentencia            : 32 33 43 44 44 65 66 67
variable             : 8
variable1            : 9
variable2            : 10

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) code -> . INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimientos

    INICIO          shift and go to state 3

    Start                          shift and go to state 1
    code                           shift and go to state 2

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) code -> INICIO . DOSPUNTOS cuerpo FIN PUNTOCOMA procedimientos

    DOSPUNTOS       shift and go to state 4


state 4

    (2) code -> INICIO DOSPUNTOS . cuerpo FIN PUNTOCOMA procedimientos
    (6) cuerpo -> . empty
    (7) cuerpo -> . expresion cuerpo
    (8) cuerpo -> . variable cuerpo
    (73) empty -> .
    (13) expresion -> . empty
    (14) expresion -> . condicion1 expresion
    (15) expresion -> . condicion2 expresion
    (16) expresion -> . repita expresion
    (17) expresion -> . hacer expresion
    (18) expresion -> . funcion expresion
    (19) expresion -> . llamarProc expresion
    (20) expresion -> . llamarProc
    (21) expresion -> . condicion1
    (22) expresion -> . condicion2
    (23) expresion -> . repita
    (24) expresion -> . hacer
    (9) variable -> . variable1
    (10) variable -> . variable2
    (25) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (26) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (43) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (44) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (45) funcion -> . Aleatorio expresion
    (46) funcion -> . Mover expresion
    (47) funcion -> . funcionAlge expresion
    (48) funcion -> . Aleatorio
    (49) funcion -> . Mover
    (50) funcion -> . funcionAlge
    (72) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (11) variable1 -> . DCL ID PUNTOCOMA
    (12) variable2 -> . DCL ID DEFAULT NUMERO PUNTOCOMA
    (51) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (52) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (65) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (66) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (67) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

  ! shift/reduce conflict for ENCASO resolved as shift
  ! shift/reduce conflict for REPITA resolved as shift
  ! shift/reduce conflict for DESDE resolved as shift
  ! shift/reduce conflict for LLAMAR resolved as shift
  ! shift/reduce conflict for DCL resolved as shift
  ! shift/reduce conflict for ALEATORIO resolved as shift
  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for INI resolved as shift
    FIN             reduce using rule 73 (empty -> .)
    ENCASO          shift and go to state 17
    REPITA          shift and go to state 18
    DESDE           shift and go to state 19
    LLAMAR          shift and go to state 23
    DCL             shift and go to state 24
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

  ! ENCASO          [ reduce using rule 73 (empty -> .) ]
  ! REPITA          [ reduce using rule 73 (empty -> .) ]
  ! DESDE           [ reduce using rule 73 (empty -> .) ]
  ! LLAMAR          [ reduce using rule 73 (empty -> .) ]
  ! DCL             [ reduce using rule 73 (empty -> .) ]
  ! ALEATORIO       [ reduce using rule 73 (empty -> .) ]
  ! MOVER           [ reduce using rule 73 (empty -> .) ]
  ! INC             [ reduce using rule 73 (empty -> .) ]
  ! DEC             [ reduce using rule 73 (empty -> .) ]
  ! INI             [ reduce using rule 73 (empty -> .) ]

    cuerpo                         shift and go to state 5
    empty                          shift and go to state 6
    expresion                      shift and go to state 7
    variable                       shift and go to state 8
    condicion1                     shift and go to state 9
    condicion2                     shift and go to state 10
    repita                         shift and go to state 11
    hacer                          shift and go to state 12
    funcion                        shift and go to state 13
    llamarProc                     shift and go to state 14
    variable1                      shift and go to state 15
    variable2                      shift and go to state 16
    Aleatorio                      shift and go to state 20
    Mover                          shift and go to state 21
    funcionAlge                    shift and go to state 22

state 5

    (2) code -> INICIO DOSPUNTOS cuerpo . FIN PUNTOCOMA procedimientos

    FIN             shift and go to state 30


state 6

    (6) cuerpo -> empty .
    (13) expresion -> empty .

  ! reduce/reduce conflict for FIN resolved using rule 6 (cuerpo -> empty .)
    FIN             reduce using rule 6 (cuerpo -> empty .)
    ENCASO          reduce using rule 13 (expresion -> empty .)
    REPITA          reduce using rule 13 (expresion -> empty .)
    DESDE           reduce using rule 13 (expresion -> empty .)
    LLAMAR          reduce using rule 13 (expresion -> empty .)
    DCL             reduce using rule 13 (expresion -> empty .)
    ALEATORIO       reduce using rule 13 (expresion -> empty .)
    MOVER           reduce using rule 13 (expresion -> empty .)
    INC             reduce using rule 13 (expresion -> empty .)
    DEC             reduce using rule 13 (expresion -> empty .)
    INI             reduce using rule 13 (expresion -> empty .)

  ! FIN             [ reduce using rule 13 (expresion -> empty .) ]


state 7

    (7) cuerpo -> expresion . cuerpo
    (6) cuerpo -> . empty
    (7) cuerpo -> . expresion cuerpo
    (8) cuerpo -> . variable cuerpo
    (73) empty -> .
    (13) expresion -> . empty
    (14) expresion -> . condicion1 expresion
    (15) expresion -> . condicion2 expresion
    (16) expresion -> . repita expresion
    (17) expresion -> . hacer expresion
    (18) expresion -> . funcion expresion
    (19) expresion -> . llamarProc expresion
    (20) expresion -> . llamarProc
    (21) expresion -> . condicion1
    (22) expresion -> . condicion2
    (23) expresion -> . repita
    (24) expresion -> . hacer
    (9) variable -> . variable1
    (10) variable -> . variable2
    (25) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (26) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (43) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (44) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (45) funcion -> . Aleatorio expresion
    (46) funcion -> . Mover expresion
    (47) funcion -> . funcionAlge expresion
    (48) funcion -> . Aleatorio
    (49) funcion -> . Mover
    (50) funcion -> . funcionAlge
    (72) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (11) variable1 -> . DCL ID PUNTOCOMA
    (12) variable2 -> . DCL ID DEFAULT NUMERO PUNTOCOMA
    (51) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (52) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (65) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (66) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (67) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

  ! shift/reduce conflict for ENCASO resolved as shift
  ! shift/reduce conflict for REPITA resolved as shift
  ! shift/reduce conflict for DESDE resolved as shift
  ! shift/reduce conflict for LLAMAR resolved as shift
  ! shift/reduce conflict for DCL resolved as shift
  ! shift/reduce conflict for ALEATORIO resolved as shift
  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for INI resolved as shift
    FIN             reduce using rule 73 (empty -> .)
    ENCASO          shift and go to state 17
    REPITA          shift and go to state 18
    DESDE           shift and go to state 19
    LLAMAR          shift and go to state 23
    DCL             shift and go to state 24
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

  ! ENCASO          [ reduce using rule 73 (empty -> .) ]
  ! REPITA          [ reduce using rule 73 (empty -> .) ]
  ! DESDE           [ reduce using rule 73 (empty -> .) ]
  ! LLAMAR          [ reduce using rule 73 (empty -> .) ]
  ! DCL             [ reduce using rule 73 (empty -> .) ]
  ! ALEATORIO       [ reduce using rule 73 (empty -> .) ]
  ! MOVER           [ reduce using rule 73 (empty -> .) ]
  ! INC             [ reduce using rule 73 (empty -> .) ]
  ! DEC             [ reduce using rule 73 (empty -> .) ]
  ! INI             [ reduce using rule 73 (empty -> .) ]

    expresion                      shift and go to state 7
    cuerpo                         shift and go to state 31
    empty                          shift and go to state 6
    variable                       shift and go to state 8
    condicion1                     shift and go to state 9
    condicion2                     shift and go to state 10
    repita                         shift and go to state 11
    hacer                          shift and go to state 12
    funcion                        shift and go to state 13
    llamarProc                     shift and go to state 14
    variable1                      shift and go to state 15
    variable2                      shift and go to state 16
    Aleatorio                      shift and go to state 20
    Mover                          shift and go to state 21
    funcionAlge                    shift and go to state 22

state 8

    (8) cuerpo -> variable . cuerpo
    (6) cuerpo -> . empty
    (7) cuerpo -> . expresion cuerpo
    (8) cuerpo -> . variable cuerpo
    (73) empty -> .
    (13) expresion -> . empty
    (14) expresion -> . condicion1 expresion
    (15) expresion -> . condicion2 expresion
    (16) expresion -> . repita expresion
    (17) expresion -> . hacer expresion
    (18) expresion -> . funcion expresion
    (19) expresion -> . llamarProc expresion
    (20) expresion -> . llamarProc
    (21) expresion -> . condicion1
    (22) expresion -> . condicion2
    (23) expresion -> . repita
    (24) expresion -> . hacer
    (9) variable -> . variable1
    (10) variable -> . variable2
    (25) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (26) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (43) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (44) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (45) funcion -> . Aleatorio expresion
    (46) funcion -> . Mover expresion
    (47) funcion -> . funcionAlge expresion
    (48) funcion -> . Aleatorio
    (49) funcion -> . Mover
    (50) funcion -> . funcionAlge
    (72) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (11) variable1 -> . DCL ID PUNTOCOMA
    (12) variable2 -> . DCL ID DEFAULT NUMERO PUNTOCOMA
    (51) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (52) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (65) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (66) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (67) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

  ! shift/reduce conflict for ENCASO resolved as shift
  ! shift/reduce conflict for REPITA resolved as shift
  ! shift/reduce conflict for DESDE resolved as shift
  ! shift/reduce conflict for LLAMAR resolved as shift
  ! shift/reduce conflict for DCL resolved as shift
  ! shift/reduce conflict for ALEATORIO resolved as shift
  ! shift/reduce conflict for MOVER resolved as shift
  ! shift/reduce conflict for INC resolved as shift
  ! shift/reduce conflict for DEC resolved as shift
  ! shift/reduce conflict for INI resolved as shift
    FIN             reduce using rule 73 (empty -> .)
    ENCASO          shift and go to state 17
    REPITA          shift and go to state 18
    DESDE           shift and go to state 19
    LLAMAR          shift and go to state 23
    DCL             shift and go to state 24
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

  ! ENCASO          [ reduce using rule 73 (empty -> .) ]
  ! REPITA          [ reduce using rule 73 (empty -> .) ]
  ! DESDE           [ reduce using rule 73 (empty -> .) ]
  ! LLAMAR          [ reduce using rule 73 (empty -> .) ]
  ! DCL             [ reduce using rule 73 (empty -> .) ]
  ! ALEATORIO       [ reduce using rule 73 (empty -> .) ]
  ! MOVER           [ reduce using rule 73 (empty -> .) ]
  ! INC             [ reduce using rule 73 (empty -> .) ]
  ! DEC             [ reduce using rule 73 (empty -> .) ]
  ! INI             [ reduce using rule 73 (empty -> .) ]

    variable                       shift and go to state 8
    cuerpo                         shift and go to state 32
    empty                          shift and go to state 6
    expresion                      shift and go to state 7
    condicion1                     shift and go to state 9
    condicion2                     shift and go to state 10
    repita                         shift and go to state 11
    hacer                          shift and go to state 12
    funcion                        shift and go to state 13
    llamarProc                     shift and go to state 14
    variable1                      shift and go to state 15
    variable2                      shift and go to state 16
    Aleatorio                      shift and go to state 20
    Mover                          shift and go to state 21
    funcionAlge                    shift and go to state 22

state 9

    (14) expresion -> condicion1 . expresion
    (21) expresion -> condicion1 .
    (13) expresion -> . empty
    (14) expresion -> . condicion1 expresion
    (15) expresion -> . condicion2 expresion
    (16) expresion -> . repita expresion
    (17) expresion -> . hacer expresion
    (18) expresion -> . funcion expresion
    (19) expresion -> . llamarProc expresion
    (20) expresion -> . llamarProc
    (21) expresion -> . condicion1
    (22) expresion -> . condicion2
    (23) expresion -> . repita
    (24) expresion -> . hacer
    (73) empty -> .
    (25) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (26) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (43) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (44) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (45) funcion -> . Aleatorio expresion
    (46) funcion -> . Mover expresion
    (47) funcion -> . funcionAlge expresion
    (48) funcion -> . Aleatorio
    (49) funcion -> . Mover
    (50) funcion -> . funcionAlge
    (72) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (51) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (52) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (65) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (66) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (67) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
